<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activityLogic.LoginActivity">

    <EditText
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/username"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/passwd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/enter_passwd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email_text"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@color/green"
        android:hint="@string/login"
        android:textColorHint="#263238"
        app:layout_constraintTop_toBottomOf="@+id/passwd_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:background="@color/orange"
        android:hint="@string/register"
        android:textColorHint="#4E342E"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</LinearLayout>